<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context=".GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_quit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/quit"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:typeface="normal"
                    android:layout_gravity="center"
                    />
                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_design"
                    android:text="clear"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:typeface="normal"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/Message"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/press_right_keys_for_chord"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:fontFamily="sans-serif-black"
                    android:layout_gravity="center"
                    android:autoSizeTextType="uniform"/>
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/text"
                    android:textColor="#000000"
                    android:textSize="50sp"
                    app:fontFamily="sans-serif-black"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/answer_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/answer"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/give_up"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_design"
                    android:text="GIVE UP"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:typeface="normal"
                    android:layout_gravity="center"
                   />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">
            <include
                android:id="@+id/normal"
                layout="@layout/piano_keys"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="9dp"
                 />

            <include
                android:id="@+id/octave_higher"
                layout="@layout/piano_keys_octave_higher"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="9dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>